--- a/src/app/OrderZapp/oz/views/oz.tpl.html
+++ b/src/app/OrderZapp/oz/views/oz.tpl.html
@@ -1,12 +1,12 @@
-<div class="">
+<div class="" style="border: 1px solid #EEE8E8; padding : 12px ;border-radius: 6px;" class="">
   <div style="margin:0px;" class="row">
     <div style="padding:2px;" class="col-md-1"></div>
     <div style="padding:2px; border: 1px solid #EEE8E8; border-radius: 6px;" class="col-md-10">
       <div style="margin:0px;" class="row">
-        <div class="col-md-3">
+        <div class="col-md-3" style = 'background-color : #FFFAFA; min-height : 1000px' >
           <div ui-view="search"></div>
         </div>
-        <div class="col-md-9">
+        <div class="col-md-9" style = 'background-color : #FFFAFA;min-height : 1000px'>
           <div ui-view="OrderZappWallView"></div>
         </div>
       </div>
