--- a/src/app/OrderZapp/oz/views/oz.view.user.feedbacks.tpl.html
+++ b/src/app/OrderZapp/oz/views/oz.view.user.feedbacks.tpl.html
@@ -5,7 +5,7 @@
     <div ng-repeat = 'feedback in feedbackContentObject' ng-if = 'feedbackContentObject.length > 0'>
 	    <div style = 'border : 1px solid #ccc; padding : 5px; margin : 5px; border-radius : 5px; background-color : #EDFDFF' >    
 	        <div style = 'width : 100%'>
-	            <div style = 'width : 50%; float : left;color: #808285;font-size: 1.5rem;line-height: 1rem;margin-bottom: 0;font-style: italic;'><span ng-bind = 'feedback.email'></span>&nbsp;[<span ng-bind = 'feedback.mobileno'></span>]</div>
+	            <div style = 'width : 50%; float : left;color: #808285;font-size: 1.5rem;line-height: 1rem;margin-bottom: 0;font-style: italic;'><a href = 'mailto:{{feedback.email}}'><span ng-bind = 'feedback.email'></span></a>&nbsp;[<span ng-bind = 'feedback.mobileno'></span>]</div>
 	            <div style = 'width : 50%;float : right;text-align: right;color: #808285;font-size: 1.5rem;line-height: 1rem;margin-bottom: 0;font-style: italic;'><span ng-bind = 'feedback.feedbackdate | date : "medium"'></span></div>
 	        </div>
 	            <hr style = 'color : black'>
