Feature: Spinner for product

--- a/src/app/ProviderWall/ManageOrders/views/oz.providerContent.orderbyBranch.tpl.html
+++ b/src/app/ProviderWall/ManageOrders/views/oz.providerContent.orderbyBranch.tpl.html
@@ -246,9 +246,9 @@
 
 
  <div id="Remove" ng-show="tabForOrders.recieved == true " >
-  <center>
+ <!--  <center>
    <img ng-hide="hideReceivedOrders || orders.length>0" src = '../assets/images/spinner1.GIF' >
- </center>
+ </center> -->
  	<div  ng-show="orders && hideReceivedOrders==false">
  	 <ul class="listStyle">
         <div oz-orders template-url="../ProviderWall/ManageOrders/views/oz.OrderByDate.tpl.html" id=""  >
@@ -292,9 +292,9 @@
 
 
   <div id="Remove" ng-show="tabForOrders.processing == true " >
-   <center>
+  <!--  <center>
     <img ng-hide="hideProcessingOrders || orders.length>0" src = '../assets/images/spinner1.GIF' >
-   </center>
+   </center> -->
 	<div ng-show="orders && hideProcessingOrders==false" >
  	 <ul class="listStyle">
         <div oz-orders template-url="../ProviderWall/ManageOrders/views/oz.Order.tpl.html" id=""  >
@@ -317,9 +317,9 @@
 
 
   <div id="Remove" ng-show="tabForOrders.delivery == true " >
-    <center>
+   <!--  <center>
     <img ng-hide="hideDeliveryOrders || orders.length>0" src = '../assets/images/spinner1.GIF' >
-   </center>
+   </center> -->
   	<div ng-show="orders && hideDeliveryOrders==false" >
  	 <ul class="listStyle">
         <div oz-orders template-url="../ProviderWall/ManageOrders/views/oz.Order.tpl.html" id=""  >
@@ -341,9 +341,9 @@
  </div>
 
    <div id="Remove" ng-show="tabForOrders.past == true " >
-    <center>
+    <!-- <center>
     <img ng-hide="hidePastOrders || orders.length>0" src = '../assets/images/spinner1.GIF' >
-   </center>
+   </center> -->
   	<div ng-show="orders && hidePastOrders==false" >
  	 <ul class="listStyle">
         <div oz-orders template-url="../ProviderWall/ManageOrders/views/oz.Order.tpl.html" id=""  >
@@ -364,9 +364,9 @@
  </div>
 
    <div id="Remove" ng-show="tabForOrders.product == true " >
-    <center>
+   <!--  <center>
     <img ng-hide="hideProductOrders || orders.length>0" src = '../assets/images/spinner1.GIF' >
-   </center>
+   </center> -->
   	<div ng-show="orders  && hideProductOrders==false" >
  	 <ul class="listStyle">
         <div oz-orders template-url="../ProviderWall/ManageOrders/views/oz.productOrder.tpl.html" id=""  >
