help module completed

--- a/src/app/OrderZapp/oz/views/oz.helpContents.tpl.html
+++ b/src/app/OrderZapp/oz/views/oz.helpContents.tpl.html
@@ -1,7 +1,7 @@
 
 
 
-<div ng-if = "templates.hp === ''">
+<!-- <div ng-if = "templates.hp === ''">
     <h4>Currently no templates added</h4>
      <br><br>
     <text-angular name="content" ng-model="template.content" ta-toolbar-button-class="texteditor-btn btn btn-default" ta-toolbar="[['h1','h2','h3', 'h4', 'h5', 'h6', 'p', 'quote','bold','italics','underline','ul', 'ol', 'undo', 'redo', 'clear', 'justifyLeft', 'justifyCenter', 'justifyRight']]"></text-angular>
@@ -20,4 +20,93 @@
 
 <div ng-if = "showTextAngular === 1">
      <text-angular name="content" ng-model="template.content" ta-toolbar-button-class="texteditor-btn btn btn-default" ta-toolbar="[['h1','h2','h3', 'h4', 'h5', 'h6', 'p', 'quote','bold','italics','underline','ul', 'ol', 'undo', 'redo', 'clear', 'justifyLeft', 'justifyCenter', 'justifyRight']]"></text-angular>
-</div>
+</div> -->
+<div style="border: 1px solid #EEE8E8; padding : 12px ;border-radius: 6px;" class="">
+        <div style = 'height : 40px; margin-right : 5px;'>
+                    <div style = 'float : right'> <button class = 'btn btn-default'  data-toggle = 'modal' data-target = '#addNewFaq'><i  class="fa fa-plus-square-o" ></i> Add New FAQ </button></div>
+        </div>
+
+        <div style = 'margin-right : 5px;'>
+                <input type = 'text' class = 'form-control' ng-model = 'filters' placeholder = 'Filter FAQ Content'>
+        </div>
+        <div ng-repeat = 'content in allHelpData | filter : filters' style = 'border : 1px solid #ccc; margin : 5px; padding : 5px'>
+           <div>
+                <div >
+                  <!--   <div><div style = 'width : 48%' > <h4 > Question Heading : </h4></div><div  style = 'width : 48%'><h4 ng-bind = 'content.heading'></h4></div></div> -->
+                  <h4>Question Heading : <span ng-bind = 'content.heading'></span></h4>
+                </div>
+
+            
+            </div>    
+            <div ng-repeat = 'list in content.faqs' style = 'margin : 5px;'>
+                 <div style = 'width : 100%'>
+                 	<div style = 'width : 20%;'>
+                 	    <h4>Question</h4>
+                 	</div>
+
+                    <div style = 'width : 100%; ' >
+                        <span ng-bind = 'list.question' ng-hide = 'list.editing'></span>
+                        <textarea class = 'form-control' ng-model = 'list.question' ng-if = 'list.editing'></textarea>
+                 	</div>
+                 </div>
+
+                 <div >
+                 	<div style = 'width : 20%; '>
+                 	    <h4>Answer</h4>
+                 	</div>
+
+                    <div style = 'width : 100%; ' >
+                        <span ng-bind = 'list.answer' ng-hide = 'list.editing'></span>
+                        <textarea class = 'form-control' ng-model = 'list.answer' rows = '10' ng-if = 'list.editing'></textarea>
+                 	</div>
+                 </div>
+
+                 <div>
+                 	<div style = 'width : 20%; '>
+                 	    <h4> Action</h4>
+                 	</div>
+
+                    <div style = 'width : 100%; '>
+                        <button class = 'btn btn-sm btn-info' ng-click = 'editQuestionHere(list)' ng-hide = 'list.editing'>Edit</button>
+                        <button class = 'btn btn-sm btn-info' ng-click = 'cancelQuestionChange(list)' ng-if = 'list.editing'>Cancel</button>
+                        <button class = 'btn btn-sm btn-info' ng-click = 'changeQuestionContent(list)' ng-if = 'list.editing'>Save</button>
+                        <button class = 'btn btn-sm btn-info' ng-click = 'removeQuestionHere(list.faqid)' ng-hide = 'list.editing'>Delete</button>
+                 	</div>
+                 </div>
+                 <hr>
+            </div>
+        </div>
+         <div id = "addNewFaq" class="modal fade" style="">     
+            <div class="modal-dialog">
+                <div class="modal-content">
+                  <div>
+                    <h4 align="center">Add New FAQ</h4>   
+                    <hr>           
+                  </div>  
+              
+                  <div class="modalAppearance">
+                   <div style = 'padding : 5px; margin : 5px;'>
+                     <input type = 'text' class = 'form-control' typeahead = 'title for title in typeadheadFaqTitleArray | filter:$viewValue' placeholder = 'Select question heading' ng-model = 'newFaqContentObject.questionheading'>
+                     <div>
+                         <div>Question</div>
+                         <div>
+                         	<textarea ng-model = 'newFaqContentObject.question' class = 'form-control'></textarea>
+                         </div> 	
+                      </div> 
+
+                      <div>
+                         <div>Answer</div>
+                         <div>
+                         	<textarea ng-model = 'newFaqContentObject.answer' class = 'form-control' rows = '10'></textarea>
+                         </div> 	
+                      </div> 
+                    </div>
+                  </div>                                                                                                 
+                  <div class="modal-footer">
+                     <button class="btn btn-info" style="background-color:#ACB2B4;border-color:#ACB2B4;" data-dismiss="modal" ng-click = 'clearFAQObject()'>Cancel</button>     
+                     <button type="button" class="btn btn-info" id="final" data-dismiss="modal" ng-click = 'insertNewFaqContent()'><b>Save</b></button>   
+                  </div>                                       
+                 </div>
+              </div>
+           </div> 
+</div>            
