--- a/src/app/OrderZapp/oz/views/oz.oz_content.tpl.html
+++ b/src/app/OrderZapp/oz/views/oz.oz_content.tpl.html
@@ -228,7 +228,7 @@
 
                       <tab heading="T&C" ui-sref = "oz.ozWall.ozT&CContent" class = "cursorPointerHyperlink" select = "getTemplateContent('TC');clearTemplatecontent();" ></tab>
 
-                      <tab heading="Help" ui-sref = "oz.ozWall.ozHelp" class = "cursorPointerHyperlink" select = "getTemplateContent('HP');clearTemplatecontent()"></tab>
+                      <tab heading="Help" ui-sref = "oz.ozWall.ozHelp" class = "cursorPointerHyperlink" select = "getHelpContent();clearTemplatecontent()"></tab>
 
                       <tab heading="About" ui-sref = "oz.ozWall.ozAbout" class = "cursorPointerHyperlink" select = "getTemplateContent('AU');clearTemplatecontent()"></tab>
 
