--- a/src/app/OrderZapp/oz/views/oz.helpContents.tpl.html
+++ b/src/app/OrderZapp/oz/views/oz.helpContents.tpl.html
@@ -26,10 +26,10 @@
                     <div style = 'float : right'> <button class = 'btn btn-default'  data-toggle = 'modal' data-target = '#addNewFaq'><i  class="fa fa-plus-square-o" ></i> Add New FAQ </button></div>
         </div>
 
-        <div style = 'margin-right : 5px;'>
+        <div style = 'margin-right : 5px;' ng-show = 'allHelpData.length > 0'>
                 <input type = 'text' class = 'form-control' ng-model = 'filters' placeholder = 'Filter FAQ Content'>
         </div>
-        <div ng-repeat = 'content in allHelpData | filter : filters' style = 'border : 1px solid #ccc; margin : 5px; padding : 5px'>
+        <div ng-repeat = 'content in allHelpData | filter : filters' style = 'border : 1px solid #ccc; margin : 5px; padding : 5px' >
            <div>
                 <div >
                   <!--   <div><div style = 'width : 48%' > <h4 > Question Heading : </h4></div><div  style = 'width : 48%'><h4 ng-bind = 'content.heading'></h4></div></div> -->
@@ -75,6 +75,19 @@
                  </div>
                  <hr>
             </div>
+        </div>
+
+        <div ng-if = 'allHelpData.length === 0 '>
+            <div style="padding:40px; opacity: .8;margin-top: 2px;margin-bottom: 1px; color: rgb(80, 74, 74);background-color:#F1F1F1; letter-spacing: 1px; margin:10px;" class="row">
+                <div class="col-md-12">
+                  <div class="no-message">
+                    <center>
+                      <p style="font-size: 14px; font-weight:bold;">As of now there are no FAQ's added.</p>      
+                      <p style="font-size: 12px;">You can add FAQ by clicking Add New FAQ Button.</p>
+                    </center>
+                  </div>
+                </div>
+              </div>
         </div>
          <div id = "addNewFaq" class="modal fade" style="">     
             <div class="modal-dialog">
