Order -require spelling corrected

--- a/src/app/ProviderWall/ManageOrders/views/oz.providerContent.orderbyBranch.tpl.html
+++ b/src/app/ProviderWall/ManageOrders/views/oz.providerContent.orderbyBranch.tpl.html
@@ -13,7 +13,7 @@
             <div class="modal-body" style="height:200px;">
            <form  id="Edit" class="css-form"  name="form.orderReason"   >  
           
-              <p style="font-size:12px;" class="text-muted">** Please enter reason for your order cancellation / rejection. Reqired field [max 160 characters]</p>
+              <p style="font-size:12px;" class="text-muted">** Please enter reason for your order cancellation / rejection. Required field [max 160 characters]</p>
             
             <textarea  type="text" 
                   ng-maxlength="160" name="reason" id="prodo-product-featuresDescription_textfield" class="form-control prodo-validation"  ng-model="reason.text"  col="40" required ></textarea>
